kubernetes/overlays/staging/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-https-ingress
spec:
  tls:
  - hosts:
    - staging.subrotosharma.site
    secretName: ecommerce-staging-tls
  rules:
  - host: staging.subrotosharma.site
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ecommerce-frontend
            port:
              number: 80
